k8s-example/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dbaas-test-pod
  labels:
    app: dbaas-test
spec:
  containers:
    - name: dbaas-test
      image: sanchpet/dbaas-test:v0.0.1
