k8s-example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dbaas-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: dbaas.sanchpet.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dbaas-test-service
                port:
                  number: 8080
